[FIX] - Btn text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,7 @@ button {
   border: none;
   border-radius: 12px;
   font-size: 1.5vw;
+  text-align: center;
 }
 
 .form-group-option > div {
